# sc2plus2

./: .gitignore  BUILDING.md  Cargo.toml  Makefile  README.md  RomHack.toml  patch.asm
include/: audio.h  cheats.h  draw.h  lib.h  menu.h  player.h  system.h
include/menus/: audio_menu.h  main_menu.h  player_menu.h  practice_menu.h
include/sc2/: addrs.h  controller.h  draw.h  mot.h  player.h  sc2.h  system.h  utils.h
include/utils/: audio.hpp  draw.h  hook.h  lines.hpp  player.hpp  practice.hpp
src/: lib.cpp  menu.cpp  system.cpp
src/menus/: audio_menu.cpp  main_menu.cpp  player_menu.cpp  practice_menu.cpp
src/sc2/: patch.cpp
src/utils/: audio.cpp  draw.cpp  hook.cpp  lines.cpp  player.cpp  practice.cpp
